# MHMOT_2025

./: .gitignore  INSTALL-MACOS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README-DEPLOYMENT.md  README-GITHUB-RELEASE.md  README-MULTI-DEVICE.md  README-UPDATE-CHECKER.md  README.md  STATUS.md  Start App.command  WORKFLOW.md  index.html  package-lock.json  package.json  verify-setup.sh  vite.config.ts
.github/workflows/: release.yml
graphics_info/: BACK-SELECT.tga  Background.tga
public/graphics_info/: BACK 02.tga  BACK 03.tga
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  display.rs  http_server.rs  lib.rs  main.rs  updater.rs
src-tauri/src/game/: mod.rs  player.rs  round.rs  state.rs
src/components/: AnswerInput.css  AnswerInput.tsx  BettingControls.css  BettingControls.tsx  DisplaySettings.css  DisplaySettings.tsx  DrawingCanvas.css  DrawingCanvas.tsx  GameSetup.css  GameSetup.tsx  GraphicsController.css  GraphicsController.tsx  GraphicsOutput.css  GraphicsOutput.tsx  PlayerPanel.css  PlayerPanel.tsx  QuizmasterView.css  QuizmasterView.tsx  ServerConfig.css  ServerConfig.tsx  UpdateNotification.css  UpdateNotification.tsx  VideoDisplay.css  VideoDisplay.tsx  VideoSourceSelector.css  VideoSourceSelector.tsx  ViewSelector.css  ViewSelector.tsx
src/hooks/: useGame.ts
src/pages/: FillOutput.tsx  KeyOutput.tsx  PlayerOutput.tsx
src/styles/: fill-output.css  key-output.css
src/types/: display.ts  game.ts
