[package]
name = "met-het-mes-op-tafel"
version = "1.2.0"
description = "Met het Mes op Tafel - Nederlandse kennisquiz met poker-elementen"
authors = ["Yellowspot BV"]
edition = "2021"

[lib]
name = "met_het_mes_op_tafel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
serialport = "4.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
